--- a/pom.xml
+++ b/pom.xml
@@ -43,7 +43,7 @@
         <guice.version>4.2.3</guice.version>
         <lombok.version>1.18.16</lombok.version>
         <jackson.version>2.9.0</jackson.version>
-        <kafka.client.version>1.1.0</kafka.client.version>
+        <kafka.client.version>2.6.0</kafka.client.version>
         <dropwizard.version>1.3.0</dropwizard.version>
         <powermock.version>1.7.4</powermock.version>
         <junit.version>4.12</junit.version>
@@ -307,7 +307,7 @@
             <dependency>
                 <groupId>org.apache.kafka</groupId>
                 <artifactId>kafka-clients</artifactId>
-                <version>1.1.0</version>
+                <version>${kafka.client.version}</version>
             </dependency>
 
             <!-- Logging -->
